[package]
name = "draw-together"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "draw-together"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
axum = { version = "0.8.1", features = ["ws"] }
tokio-util = { version = "0.7.13", features = ["io"] }
futures-util = "0.3.31"
